--- a/hollow-zone-minecraft.yml
+++ b/hollow-zone-minecraft.yml
@@ -30,5 +30,5 @@ services:
       SEED: ""
       MODE: "survival"
       MOTD: ""
-      LEVEL: "Stank 2"
+      LEVEL: "Hollow Zone"
       ALLOW_FLIGHT: "true"
